--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,199 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
+
+.header-inno {
+  text-align: center;
+  text-decoration: none;
+  list-style: none;
+  font-size: 3em; }
+  .header-inno .navbar-inno {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style: none;
+    margin-bottom: 15px;
+    transition: all .3s ease;
+    list-style: none; }
+    .header-inno .navbar-inno .navbar-inno li a:hover {
+      color: #FFFFFF;
+      padding-left: 6px;
+      list-style: none;
+      text-decoration: dashed;
+      margin-bottom: 15px;
+      transition: all .3s ease;
+      list-style: none; }
+      .header-inno .navbar-inno .navbar-inno li a:hover .navbar-inno li a {
+        list-style: none;
+        text-decoration: black;
+        font-family: "Roboto", sans-serif;
+        color: rgba(218, 217, 238, 0.596);
+        font-size: 3rem;
+        display: block; }
+
+.header-suc {
+  text-align: center;
+  text-decoration: none;
+  list-style: none;
+  font-size: 3em; }
+  .header-suc .navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style: none;
+    margin-bottom: 15px;
+    transition: all .3s ease;
+    list-style: none; }
+    .header-suc .navbar .navbar li a:hover {
+      color: #FFFFFF;
+      padding-left: 6px;
+      list-style: none;
+      text-decoration: dashed;
+      margin-bottom: 15px;
+      transition: all .3s ease;
+      list-style: none; }
+      .header-suc .navbar .navbar li a:hover .navbar li a {
+        list-style: none;
+        text-decoration: black;
+        font-family: "Roboto", sans-serif;
+        color: rgba(218, 217, 238, 0.596);
+        font-size: 3rem;
+        display: block; }
+
+.body-inno {
+  background: #000000;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #e74c3c, #000000);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #e74c3c, #000000);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  margin: 0;
+  position: relative;
+  padding-bottom: 3em;
+  min-height: 200vh; }
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  text-decoration: none;
+  list-style: none;
+  font-family: "Roboto", sans-serif; }
+
+.footer {
+  padding: 1em 0;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-decoration: none;
+  list-style: none; }
+
+.footer-row {
+  display: flex;
+  flex-wrap: wrap; }
+
+.footer-links {
+  width: 25%;
+  padding: 0 15px; }
+
+.footer-links h4 {
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.596);
+  margin-bottom: 25px;
+  font-weight: 500px;
+  border-bottom: 2px solid #fffbfb;
+  padding-bottom: 10px;
+  display: inline-block; }
+
+.footer-links ul li a {
+  font-size: 18px;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.596);
+  display: block;
+  margin-bottom: 15px;
+  transition: all .3s ease;
+  list-style: none; }
+
+.footer-links ul li a:hover {
+  color: #FFFFFF;
+  padding-left: 6px;
+  list-style: none;
+  text-decoration: none; }
+
+.social-link a {
+  display: inline block;
+  min-height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 50%;
+  color: #FFFFFF;
+  transition: all .5s ease; }
+
+.social-link a:hover {
+  background-color: aqua; }
+
+.body-inno {
+  background: #000000;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #e74c3c, #000000);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #e74c3c, #000000);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  margin: 0;
+  position: relative;
+  padding-bottom: 3em;
+  min-height: 200vh; }
+
+.tit-inno {
+  text-align: center;
+  font-size: 3rem;
+  margin: 20px 20px;
+  color: #340c4e; }
+
+.Innovacion {
+  display: flex;
+  justify-content: center;
+  width: 600px;
+  height: 430px;
+  margin: 0 auto; }
+
+.Innovacion img {
+  width: 0px;
+  flex-grow: 1;
+  object-fit: cover;
+  opacity: .8; }
+
+.Innovacion img:hover {
+  cursor: pointer;
+  width: 300px;
+  opacity: 1;
+  filter: contrast(120%); }
+
+.tit-inno2 {
+  text-align: center;
+  font-size: 3rem;
+  margin: 20px 20px;
+  color: #340c4e; }
+
+.temas-inno {
+  display: flex;
+  background: #03001e;
+  background: #b92b27;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #1565C0, #b92b27);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #1565C0, #b92b27);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  height: 30%;
+  width: 50%;
+  flex-direction: column;
+  margin: 0 auto; }
+
+.temas-inno iframe {
+  height: 15%;
+  display: flex;
+  justify-content: center;
+  text-align: center; }
