--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,4 +8,11 @@
 @import "./base/reset";
 @import "./layout/header";
 @import "./layout/footer";
-@import "./layout/main-innovacion"
+@import "./layout/main-innovacion";
+@import "./layout/main-sucursales";
+@import "./layout/main-tienda";
+@import "./layout/main-inicio";
+@import "./layout/main-soporte";
+@import "./layout/media/media1024";
+@import "./layout/media/media768";
+@import "./layout/media/media320";
