--- a/scss/layout/_main-innovacion.scss
+++ b/scss/layout/_main-innovacion.scss
@@ -1,19 +1,13 @@
 .body-inno {
-    background: #000000;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to top, #e74c3c, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to top, #e74c3c, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #000000;
+    background: -webkit-linear-gradient(to top, #e74c3c, #000000);
+    background: linear-gradient(to top, #e74c3c, #000000);
+    margin: 0;
+    position: relative;
+    padding-bottom: 3em;
+    min-height: 200vh;
 
- 
-     margin: 0;
-     position: relative;
-     padding-bottom: 3em;
-     min-height: 200vh;
- 
- }
-
-
-
-
+}
 
 .tit-inno {
     text-align: center;
@@ -22,16 +16,14 @@ background: linear-gradient(to top, #e74c3c, #000000); /* W3C, IE 10+/ Edge, Fir
     color: #340c4e;
 }
 
-
 .Innovacion {
     display: flex;
     justify-content: center;
     width: 600px;
     height: 430px;
     margin: 0 auto;
+
 }
-
-
 
 .Innovacion img {
     width: 0px;
@@ -48,37 +40,22 @@ background: linear-gradient(to top, #e74c3c, #000000); /* W3C, IE 10+/ Edge, Fir
 
 }
 
-
-
-
 .tit-inno2 {
-    text-align: center;
-    font-size: 3rem;
-    margin: 20px 20px;
-    color: #340c4e;
+@extend .tit-inno;
+
 }
 
 .temas-inno {
     display: flex;
     background: #03001e;
     background: #b92b27;
-    /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #1565C0, #b92b27);
-    /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #1565C0, #b92b27);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
     height: 30%;
     width: 50%;
     flex-direction: column;
     margin: 0 auto;
 }
-
-
-
-
-
-
 
 .temas-inno iframe {
     height: 15%;
