--- a/scss/layout/_main-sucursales.scss
+++ b/scss/layout/_main-sucursales.scss
@@ -1,58 +1,57 @@
-.body-suc {
-    background: #000000;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to top, #e74c3c, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to top, #e74c3c, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
- 
-     margin: 0;
-     position: relative;
-     padding-bottom: 3em;
-     min-height: 100vh;
+.body-sucu {
+    background: #000000;
+    background: -webkit-linear-gradient(to top, #e74c3c, #000000);
+    background: linear-gradient(to top, #e74c3c, #000000);
+    margin: 0;
+    position: relative;
+    padding-bottom: 3em;
+    min-height: 100vh;
 }
+
 .header-suc {
     text-align: center;
     text-decoration: none;
     list-style: none;
     font-size: 3em;
-   
+
 
 }
 
 .navbar {
-   display: flex;
-   flex-direction: row;
-   justify-content: space-around;
-   list-style: none;
-   margin-bottom: 15px;
-   transition: all .3s ease;
-   list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style: none;
+    margin-bottom: 15px;
+    transition: all .3s ease;
+    list-style: none;
 
 }
 
 .navbar li a:hover {
-   color: #FFFFFF;
-   padding-left: 6px;
-   list-style: none;
-   text-decoration: dashed;
-   margin-bottom: 15px;
-   transition: all .3s ease;
-   list-style: none;
+    color: #FFFFFF;
+    padding-left: 6px;
+    list-style: none;
+    text-decoration: dashed;
+    margin-bottom: 15px;
+    transition: all .3s ease;
+    list-style: none;
 
 
 }
 
 .navbar li a {
-   list-style: none;
-   text-decoration: rgb(243, 236, 236);
-   font-family: "Roboto", sans-serif;
-   color: rgba(218, 217, 238, 0.596);
-   font-size: 3rem;
-   display: block;
+    list-style: none;
+    text-decoration: rgb(243, 236, 236);
+    font-family: "Roboto", sans-serif;
+    color: rgba(218, 217, 238, 0.596);
+    font-size: 3rem;
+    display: block;
 
 
 }
 
-.mapas{
+.mapas {
     margin-top: 150px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
